--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="tailwindcss" />
 </head>
 
-<body class="bg-neutral-900 text-white">
+<body class="bg-neutral-900 h-screen text-white">
   <div id="root"></div>
   <script type="module" src="../src/client.tsx"></script>
 </body>
